<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Evénement">
        <menu>
            <item
                android:id="@+id/nav_listEvents"
                android:icon="@drawable/ic_list_events"
                android:title="@string/eventList" />
            <item
                android:id="@+id/nav_createEvent"
                android:icon="@drawable/ic_add_event"
                android:title="@string/createEvent" />
        </menu>
    </item>

    <item android:title="Amis">
        <menu>
            <item
                android:id="@+id/nav_listFriend"
                android:icon="@drawable/ic_list_friends"
                android:title="@string/friendsList" />
            <item
                android:id="@+id/nav_addFriend"
                android:icon="@drawable/ic_add_friend"
                android:title="@string/addFriend" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>
